package gps_challenge;

public class Evento {
}
