package gps_challenge;

public class Obstaculo extends Evento{
}
