package gps_challenge;

public class Sorpresa extends Evento{
}
